--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Flasky{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello Sam!</h1>
+    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    {% if email %}
+        {% if 'utoronto' in email %}
+            <h1>Your UofT email is {{ email }}</h1>
+        {% else %}
+            <h1>Please use yor UofT email.{% endif %}</h1>
+    {% endif %}
 </div>
-<p>The local date and time is {{ moment(current_time).format('LLLL') }}.</p>
-<p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
+{{ wtf.quick_form(form) }}
 {% endblock %}
