fix typo in templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         {% if 'utoronto' in email %}
             <h1>Your UofT email is {{ email }}</h1>
         {% else %}
-            <h1>Please use yor UofT email.{% endif %}</h1>
+            <h1>Please use your UofT email.{% endif %}</h1>
     {% endif %}
 </div>
 {{ wtf.quick_form(form) }}
